src/objects/PradeepTesting__c.object
<CustomObject>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>number1__c</fullName>
        <label>number1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>